--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "homepage": "https://github.com/LuisMariscalDev/festival#readme",
   "devDependencies": {
+    "glob": "^10.4.1",
     "gulp": "^5.0.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.77.2"
+    "gulp-terser": "^2.1.0",
+    "sass": "^1.77.2",
+    "sharp": "^0.33.4"
   }
 }
